<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="3sp"
            android:text="@string/word_label"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/word"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/word_hint" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="3sp"
        android:text="@string/word_desp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/detail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/desp_hint"
        android:lines="3" />

    <Button
        android:id="@+id/insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="3sp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/key"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_hint" />

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search" />
    <!--
<ListView 
	android:id="@+id/show"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent" 
	/>			
    -->

</LinearLayout>